--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,9 +9,10 @@ package:
 source:
   - url: https://github.com/tesseract-ocr/{{ name }}/archive/{{ version }}.tar.gz
     sha256: {{ sha256 }}
+    folder: tesseract
   - url: https://github.com/tesseract-ocr/tessdata/archive/3.04.00.tar.gz
     sha256: 5dcb37198336b6953843b461ee535df1401b41008d550fc9e43d0edabca7adb1
-    folder: tesseract/tessdata
+    folder: tessdata
 
 build:
   number: 1
@@ -58,7 +59,7 @@ about:
   home: https://github.com/tesseract-ocr/tesseract
   license: Apache-2.0
   license_family: Apache
-  license_file: LICENSE
+  license_file: tesseract/LICENSE
   summary: 'An optical character recognition (OCR) engine'
 
   description: |
