--- a/.ci_support/linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
+++ b/.ci_support/linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
@@ -1,5 +1,3 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
 build_number_decrement:
 - '1000'
 c_compiler:
@@ -8,6 +6,10 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- toolchain_cxx
+docker_image:
+- condaforge/linux-anvil
 giflib:
 - '5.1'
 jpeg:
@@ -18,10 +20,6 @@ libtiff:
 - 4.0.9
 libwebp:
 - 1.0.0
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
 openjpeg:
 - '2.3'
 pin_run_as_build:
@@ -45,8 +43,10 @@ xz:
 - '5.2'
 zip_keys:
 - - c_compiler
+  - cxx_compiler
   - channel_sources
   - channel_targets
+  - docker_image
   - build_number_decrement
 zlib:
 - '1.2'
