--- a/.ci_support/osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
+++ b/.ci_support/osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
@@ -1,13 +1,15 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 build_number_decrement:
-- '0'
+- '1000'
 c_compiler:
-- gcc
+- toolchain_c
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
-docker_image:
-- condaforge/linux-anvil-comp7
+- conda-forge main
+cxx_compiler:
+- toolchain_cxx
 giflib:
 - '5.1'
 jpeg:
@@ -18,6 +20,10 @@ libtiff:
 - 4.0.9
 libwebp:
 - 1.0.0
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 openjpeg:
 - '2.3'
 pin_run_as_build:
@@ -41,9 +47,9 @@ xz:
 - '5.2'
 zip_keys:
 - - c_compiler
+  - cxx_compiler
   - channel_sources
   - channel_targets
-  - docker_image
   - build_number_decrement
 zlib:
 - '1.2'
