--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,17 +1,19 @@
-build_number_decrement:
-- '0'
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 c_compiler:
-- gcc
+- clang
+c_compiler_version:
+- '4'
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 cxx_compiler:
-- gxx
-docker_image:
-- condaforge/linux-anvil-comp7
+- clangxx
+cxx_compiler_version:
+- '4'
 giflib:
-- '5.1'
+- 5.1.7
 jpeg:
 - '9'
 libpng:
@@ -20,11 +22,13 @@ libtiff:
 - 4.0.9
 libwebp:
 - 1.0.0
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 openjpeg:
 - '2.3'
 pin_run_as_build:
-  giflib:
-    max_pin: x.x
   jpeg:
     max_pin: x
   libpng:
@@ -41,12 +45,5 @@ pin_run_as_build:
     max_pin: x.x
 xz:
 - '5.2'
-zip_keys:
-- - c_compiler
-  - cxx_compiler
-  - channel_sources
-  - channel_targets
-  - docker_image
-  - build_number_decrement
 zlib:
 - '1.2'
