suport build for windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,27 +15,33 @@ source:
     folder: tessdata_fast
 
 build:
-  number: 0
-  skip: True  # [win]
+  number: 1
+  skip: True  # [win and vc<14]
+  run_exports:
+    - {{ pin_subpackage(name, max_pin='x.x.x') }}
 
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - automake
-    - autoconf
-    - pkg-config
-    - libtool
+    - autoconf  # [not win]
+    - automake  # [not win]
+    - libtool  # [not win]
+    - pkg-config  # [not win]
+    - cmake  # [win]
+
   host:
-    - libpng
+    - giflib  # [not win]
     - jpeg
-    - libtiff
-    - zlib
     - leptonica
+    - libpng
+    - libtiff
     - libwebp
-    - xz
     - openjpeg
-    - giflib
+    - xz  # [not win]
+    - zlib
+    - libarchive
+
   run:
     - libpng
     - jpeg
@@ -43,9 +49,11 @@ requirements:
     - zlib
     - leptonica
     - libwebp
-    - xz
+    - libarchive
+    - xz  # [not win]
     - openjpeg
-    - giflib
+    - giflib  # [not win]
+
 
 test:
   files:
@@ -73,3 +81,4 @@ extra:
   recipe-maintainers:
     - CurtLH
     - carlodri
+    - adbeda
