--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
@@ -1,19 +1,11 @@
 c_compiler:
-- gcc
-c_compiler_version:
-- '7'
+- vs2015
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
-cxx_compiler_version:
-- '7'
-docker_image:
-- condaforge/linux-anvil-comp7
-giflib:
-- 5.1.7
+- vs2015
 jpeg:
 - '9'
 libpng:
@@ -35,11 +27,15 @@ pin_run_as_build:
     max_pin: x.x
   openjpeg:
     max_pin: x.x
-  xz:
-    max_pin: x.x
+  vc:
+    max_pin: x
   zlib:
     max_pin: x.x
-xz:
-- '5.2'
+vc:
+- '14'
+zip_keys:
+- - vc
+  - c_compiler
+  - cxx_compiler
 zlib:
 - '1.2'
