--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "tesseract" %}
 {% set version = "4.1.1" %}
-{% set sha256 = "f1b71e97f27bafffb6a730ee66fd9dc021afc38f318fdc80a464a84a519227fe" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +7,7 @@ package:
 
 source:
   - url: https://github.com/tesseract-ocr/{{ name }}/archive/{{ version }}.tar.gz
-    sha256: {{ sha256 }}
+    sha256: 2a66ff0d8595bff8f04032165e6c936389b1e5727c3ce5a27b3e059d218db1cb
     folder: tesseract
   - url: https://github.com/tesseract-ocr/tessdata_fast/archive/4.0.0.tar.gz
     sha256: f1b71e97f27bafffb6a730ee66fd9dc021afc38f318fdc80a464a84a519227fe
