--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
     folder: tessdata_fast
 
 build:
-  number: 1
+  number: 2
   skip: True  # [win and vc<14]
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x.x') }}
@@ -81,3 +81,5 @@ extra:
     - CurtLH
     - carlodri
     - adbeda
+    - oblute
+    - rlura14
