--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - automake  # [not win]
     - libtool  # [not win]
     - pkg-config  # [not win]
+    - make  # [not win]
     - cmake  # [win]
 
   host:
