maybe libtiff is needed in build env

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - automake  # [not win]
     - leptonica    
     - libtool  # [not win]
+    - libtiff
     - pkg-config  # [not win]
     - make  # [not win]
     - cmake  # [win]
