--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,20 +28,18 @@ requirements:
     - {{ compiler('cxx') }}
     - autoconf  # [not win]
     - automake  # [not win]
-    - leptonica    
     - libtool  # [not win]
     - libtiff
     - pkg-config  # [not win]
     - make  # [not win]
     - cmake  # [win]
-    - curl <7.71.1  # [win]
-    - m2-unzip  # [win]    
 
   host:
     - giflib  # [not win]
     - libarchive
     - jpeg
-    - leptonica
+    - leptonica  # [not win]
+    - leptonica  <1.80  # [win]
     - libpng
     - libtiff
     - libwebp
