--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,8 @@ requirements:
     - giflib  # [not win]
     - libarchive
     - jpeg
-    - leptonica
+    - leptonica  # [not win]
+    - leptonica  <1.80  # [win]
     - libpng
     - libtiff
     - libwebp
