--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,7 +1,7 @@
 azure:
   settings_win:
     pool:
-      vmImage: windows-2019
+      vmImage: windows-latest
 build_platform:
   linux_aarch64: linux_64
   linux_ppc64le: linux_64
