Remove the leptonica version constraint on Windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,8 +35,7 @@ requirements:
     - giflib  # [not win]
     - libarchive
     - jpeg
-    - leptonica  # [not win]
-    - leptonica  <1.80  # [win]
+    - leptonica
     - libpng
     - libtiff
     - libwebp
