Manually import the jpeg-turbo migration

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,7 @@ requirements:
   host:
     - giflib  # [not win]
     - libarchive
-    - jpeg
+    - libjpeg-turbo
     - leptonica
     - libpng
     - libtiff
