--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -20,10 +20,10 @@ docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 giflib:
 - '5.2'
-jpeg:
-- '9'
 libarchive:
 - '3.6'
+libjpeg_turbo:
+- 2.1.5
 libpng:
 - '1.6'
 libtiff:
