--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -14,10 +14,10 @@ cxx_compiler_version:
 - '15'
 giflib:
 - '5.2'
-jpeg:
-- '9'
 libarchive:
 - '3.6'
+libjpeg_turbo:
+- 2.1.5
 libpng:
 - '1.6'
 libtiff:
