--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -6,10 +6,10 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - vs2019
-jpeg:
-- '9'
 libarchive:
 - '3.6'
+libjpeg_turbo:
+- 2.1.5
 libpng:
 - '1.6'
 libtiff:
